// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuContent component tests matches snapshot 1`] = `
<Menu>
  <MenuItem
    key="shared.ownerDashboard"
  >
    <Link
      href="/dashboard/campers"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.ownerDashboard"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
  <MenuItem
    key="headerHeader.destinations"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="headerHeader.destinations"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="userHeader.helpCenter"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="userHeader.helpCenter"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="headerHeader.messages"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="headerHeader.messages"
        />
      </span>
    </div>
  </MenuItem>
</Menu>
`;

exports[`MenuContent component tests matches snapshot when isUserLoggedIn equals false 1`] = `
<Menu>
  <MenuItem
    key="shared.ownerDashboard"
  >
    <Link
      href="/dashboard/campers"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.ownerDashboard"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
  <MenuItem
    key="headerHeader.destinations"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="headerHeader.destinations"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="userHeader.helpCenter"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="userHeader.helpCenter"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="shared.signUp"
  >
    <Link
      href="/sign_up"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.signUp"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
  <MenuItem
    key="shared.logIn"
  >
    <Link
      href="/log_in"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.logIn"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
</Menu>
`;

exports[`MenuContent component tests matches snapshot when showOwnersDashboard equals false 1`] = `
<Menu>
  <MenuItem
    key="headerHeader.destinations"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="headerHeader.destinations"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="userHeader.helpCenter"
  >
    <div
      className="main-account-header__grouped-menu-item"
    >
      <span
        className="main-account-header__item-txt"
      >
        <Memo(FormattedMessage)
          id="userHeader.helpCenter"
        />
      </span>
    </div>
  </MenuItem>
  <MenuItem
    key="shared.signUp"
  >
    <Link
      href="/sign_up"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.signUp"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
  <MenuItem
    key="shared.logIn"
  >
    <Link
      href="/log_in"
    >
      <div
        className="main-account-header__grouped-menu-item"
      >
        <span
          className="main-account-header__item-txt"
        >
          <Memo(FormattedMessage)
            id="shared.logIn"
          />
        </span>
      </div>
    </Link>
  </MenuItem>
</Menu>
`;
